update hiera path to /opt/puppet/pve/hiera all pve modules must be renamed from blogr-pve to ove

--- a/files/etc/hiera.yaml
+++ b/files/etc/hiera.yaml
@@ -1,7 +1,7 @@
 :backends:
   - yaml
 :yaml:
-  :datadir: "/opt/pve/hiera"
+  :datadir: "/opt/puppet/pve/hiera"
 :hierarchy:
   - "nodes/%{fqdn}"
   - common
