ignore more generated directories

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,12 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+.bundle/
+.idea/
+.librarian/
+.tmp/
+Gemfile.lock
+Puppetfile.lock
+bin/
+modules/
