--- a/hiera/nodes/db-1.dragon.lan.yaml
+++ b/hiera/nodes/db-1.dragon.lan.yaml
@@ -1,3 +1,11 @@
 pve::profiles::network:
   hostname: db-1
-  ipaddress: 10.0.1.203
+  ipaddress: 10.0.3.5
+
+pve::profiles::network:
+  gateway: 10.0.3.1
+
+pve::profiles::database:
+  name: blogr
+  user: blogr
+  password: password1
