--- a/hiera/nodes/db-2.dragon.lan.yaml
+++ b/hiera/nodes/db-2.dragon.lan.yaml
@@ -1,3 +1,11 @@
 pve::profiles::network:
   hostname: db-2
-  ipaddress: 10.0.1.206
+  ipaddress: 10.0.3.6
+
+pve::profiles::network:
+  gateway: 10.0.3.1
+
+pve::profiles::database:
+  name: blogr
+  user: blogr
+  password: password1
