--- a/hiera/nodes/front-2.dragon.lan.yaml
+++ b/hiera/nodes/front-2.dragon.lan.yaml
@@ -1,9 +1,11 @@
 pve::profiles::network:
   hostname: front-2
-  ipaddress: 10.0.1.208
+  ipaddress: 10.0.2.3
 
 pve::profiles::reverseproxy:
   app_hosts:
     - app-1.dragon.lan:3000
     - app-2.dragon.lan:3000
 
+pve::profiles::network:
+  gateway: 10.0.2.1
