--- a/hiera/nodes/front-1.dragon.lan.yaml
+++ b/hiera/nodes/front-1.dragon.lan.yaml
@@ -1,7 +1,6 @@
-pve::profiles::network:
-  hostname: front-1
-  ipaddress: 10.0.2.2
-  gateway: 10.0.2.3
+pve::profiles::network::hostname: front-1
+pve::profiles::network::ipaddress: 10.0.2.2
+pve::profiles::network::gateway: 10.0.2.3
 
 pve::profiles::reverseproxy:
   app_hosts:
