--- a/hiera/nodes/log-1.dragon.lan.yaml
+++ b/hiera/nodes/log-1.dragon.lan.yaml
@@ -1,4 +1,3 @@
-pve::profiles::network:
-  hostname: log-1
-  ipaddress: 10.0.5.4
-  gateway: 10.0.5.3
+pve::profiles::network:hostname: log-1
+pve::profiles::network:ipaddress: 10.0.5.4
+pve::profiles::network:gateway: 10.0.5.3
