--- a/hiera/nodes/app-1.dragon.lan.yaml
+++ b/hiera/nodes/app-1.dragon.lan.yaml
@@ -1,4 +1,3 @@
-pve::profiles::network:
-  hostname: app-1
-  ipaddress: 10.0.3.2
-  gateway: 10.0.3.3
+pve::profiles::network::hostname: app-1
+pve::profiles::network::ipaddress: 10.0.3.2
+pve::profiles::network::gateway: 10.0.3.3
