--- a/hiera/nodes/app-2.dragon.lan.yaml
+++ b/hiera/nodes/app-2.dragon.lan.yaml
@@ -1,4 +1,3 @@
-pve::profiles::network:
-  hostname: app-2
-  ipaddress: 10.0.3.3
-  gateway: 10.0.3.3
+pve::profiles::network::hostname: app-2
+pve::profiles::network::ipaddress: 10.0.3.3
+pve::profiles::network::gateway: 10.0.3.3
