--- a/hiera/nodes/app-3.dragon.lan.yaml
+++ b/hiera/nodes/app-3.dragon.lan.yaml
@@ -1,4 +1,3 @@
-pve::profiles::network:
-  hostname: app-3
-  ipaddress: 10.0.3.4
-  gateway: 10.0.3.3
+pve::profiles::network::hostname: app-3
+pve::profiles::network::ipaddress: 10.0.3.4
+pve::profiles::network::gateway: 10.0.3.3
