--- a/hiera/nodes/db-2.dragon.lan.yaml
+++ b/hiera/nodes/db-2.dragon.lan.yaml
@@ -1,7 +1,6 @@
-pve::profiles::network:
-  hostname: db-2
-  ipaddress: 10.0.3.6
-  gateway: 10.0.3.3
+pve::profiles::network::hostname: db-2
+pve::profiles::network::ipaddress: 10.0.3.6
+pve::profiles::network::gateway: 10.0.3.3
 
 pve::profiles::database:
   name: blogr
