--- a/hiera/nodes/db-2.dragon.lan.yaml
+++ b/hiera/nodes/db-2.dragon.lan.yaml
@@ -2,7 +2,9 @@ pve::profiles::network::hostname: db-2
 pve::profiles::network::ipaddress: 10.0.3.6
 pve::profiles::network::gateway: 10.0.3.3
 
-pve::profiles::database:
-  name: blogr
-  user: blogr
-  password: password1
+pve::profiles::database::standby::db_name: blogr
+pve::profiles::database::standby::db_user: blogr
+pve::profiles::database::standby::db_password: password1
+pve::profiles::database::standby::db_host: db-1.dragon.lan
+pve::profiles::database::standby::rep_user: repuser
+pve::profiles::database::standby::rep_password: password1
