refactor to class parameters, auto populated from hiera.

--- a/hiera/nodes/front-1.dragon.lan.yaml
+++ b/hiera/nodes/front-1.dragon.lan.yaml
@@ -1,4 +1,3 @@
-pve::profiles::reverseproxy:
-  app_hosts:
-    - app-1.dragon.lan:3000
-    - app-3.dragon.lan:3000
+pve::profiles::reverseproxy::app_hosts:
+  - app-1.dragon.lan:3000
+  - app-3.dragon.lan:3000
