--- a/hiera.yaml
+++ b/hiera.yaml
@@ -1,7 +1,12 @@
 :backends:
   - yaml
+  - eyaml
 :yaml:
   :datadir: "/opt/pve/hiera"
+:eyaml:
+  :datadir: "/opt/pve/hiera"
+  :pkcs7_private_key: /etc/puppet/keys/private_key.pkcs7.pem
+  :pkcs7_public_key: /etc/puppet/keys/public_key.pkcs7.pem
 :hierarchy:
   - "nodes/%{fqdn}"
   - common
