--- a/hiera/nodes/front-2.dragon.lan.yaml
+++ b/hiera/nodes/front-2.dragon.lan.yaml
@@ -1,3 +1,7 @@
 pve::profiles::reverseproxy::app_hosts:
   - app-2.dragon.lan:3000
   - app-4.dragon.lan:3000
+
+pve::profiles::reverseproxy::server_names:
+  - app-2
+  - app-4
