--- a/hiera/nodes/front-1.dragon.lan.yaml
+++ b/hiera/nodes/front-1.dragon.lan.yaml
@@ -1,6 +1,6 @@
 pve::profiles::reverseproxy::app_hosts:
-  - app-1.dragon.lan:3000
-  - app-3.dragon.lan:3000
+  - app-1.dragon.lan
+  - app-3.dragon.lan
 
 pve::profiles::reverseproxy::server_names:
   - app-1
