add missing server names closes #3

--- a/hiera/nodes/t-lb-01.dragon.lan.yaml
+++ b/hiera/nodes/t-lb-01.dragon.lan.yaml
@@ -1,3 +1,7 @@
 pve::profiles::reverseproxy::app_hosts:
   - t-app-01.dragon.lan
   - t-app-02.dragon.lan
+
+pve::profiles::reverseproxy::server_names:
+  - t-app-01
+  - t-app-02
