--- a/hiera/nodes/t-lb-01.dragon.lan.yaml
+++ b/hiera/nodes/t-lb-01.dragon.lan.yaml
@@ -1,7 +1,7 @@
-pve::profiles::reverseproxy::app_hosts:
+pve::profiles::blogr::lb::app_hosts:
   - t-app-01.dragon.lan
   - t-app-02.dragon.lan
 
-pve::profiles::reverseproxy::server_names:
+pve::profiles::blogr::lb::server_names:
   - t-app-01
   - t-app-02
