--- a/hiera/nodes/p-lb-01.dragon.lan.yaml
+++ b/hiera/nodes/p-lb-01.dragon.lan.yaml
@@ -1,7 +1,7 @@
-pve::profiles::reverseproxy::app_hosts:
+pve::profiles::blogr::lb::app_hosts:
   - p-app-01.dragon.lan
   - p-app-03.dragon.lan
 
-pve::profiles::reverseproxy::server_names:
+pve::profiles::blogr::lb::server_names:
   - p-app-01
   - p-app-03
