--- a/files/etc/traefik/traefik.toml
+++ b/files/etc/traefik/traefik.toml
@@ -742,7 +742,7 @@ watch = true
 #
 # Optional
 #
-# prefix = "traefik"
+prefix = "traefik"
 
 # Override default configuration template. For advanced users :)
 #
